Issue #14252: Fix subprocess.Popen.terminate() to not raise an error under Windows when the child process has already exited.